--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,7 +7,7 @@
    <%= text_area_tag :'post[description]' %><br>
   
 
-  <%= submit_Tag "Submit Post" %>
+  <%= submit_tag "Submit Post" %>
 <% end %>
 
 <%= params.inspect %>
